--- a/templates/index.html
+++ b/templates/index.html
@@ -5,24 +5,24 @@
 {% endblock %}
 
 {% block main %}
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th class="text-start">Symbol</th>
-                <th class="text-end">Shares</th>
-                <th class="text-end">TOTAL</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for item in portfolio %}
-                <tr>
-                    <td class="text-start">{{ item.symbol }}</td>
-                    <td class="text-end">{{ item.shares }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
-
-
+<div class="card text-center">
+    <div class="card-header">
+      <ul class="nav nav-tabs card-header-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="true" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Hello there 👋🏼 {{ greet }}</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
 {% endblock %}
