--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,10 +36,11 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/messages">Send Message</a></li>
                             <li class="nav-item"><a class="nav-link" href="/search">Search for Friends</a></li>
                             <li class="nav-item"><a class="nav-link" href="/friends">My Friends</a></li>
                             <li class="nav-item"><a class="nav-link" href="/requests">Requests</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/history">Messages History</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
