--- a/templates/search.html
+++ b/templates/search.html
@@ -12,9 +12,38 @@
         <button class="btn btn-secondary" type="submit">Search for Friends</button>
     </form>
     <br>
+
+    <h2 style="color: rgb(255, 255, 255);">🔎  Search Results  🔍</h2>
     <br>
-    <div>
-        <h3 style="color: rgb(1, 1, 16);">Search Results 🔍</h3>
+
+    <table class="table table-striped table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Full Name</th>
+            <th scope="col">Handle</th>
+            <th scope="col">Country</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        {% for friend in friends %}
+        <tbody class="table-group-divider">
+          <tr>
+            <th scope="row">{{ loop.index }}</th>
+            <td>{{ friend.full_name }}</td>
+            <td>@{{ friend.username }}</td>
+            <td>{{ friend.country }}</td>
+            <td><form action="/request" method="post" style="display:inline;">
+                <input type="hidden" name="friend_id" value="{{ friend.id }}">
+                <button class="btn btn-info btn-sm" type="submit">Send Invite</button>
+              </form>
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    <!-- <div>
+
         {% for friend in friends %}
             <div class="row mb-2 align-items-center">
                 <div class="col-sm-9">
@@ -28,7 +57,7 @@
                 </div>
             </div>
         {% endfor %}
-    </div>
+    </div> -->
     <br>
     <a href="/" style="color: black;">Back to Home</a>
 {% endblock %}
