--- a/templates/index.html
+++ b/templates/index.html
@@ -8,21 +8,12 @@
 <div class="card text-center">
     <div class="card-header">
       <ul class="nav nav-tabs card-header-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
     </div>
     <div class="card-body">
       <h5 class="card-title">Hello there 👋🏼 {{ greet }}</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">You have <b>{{ messages }}</b> messages in your Inbox</p>
+      <a href="/inbox" class="btn btn-primary">Check Messages</a>
     </div>
   </div>
 {% endblock %}
