--- a/templates/register.html
+++ b/templates/register.html
@@ -13,13 +13,24 @@
             <input autocomplete="off" class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" class="form-control mx-auto w-auto" name="country" placeholder="Country" type="text">
-        </div>
-        <div class="mb-3">
             <input class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
         </div>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" name="confirmation" placeholder="Confirm Password" type="password">
+        </div>
+        <div class="mb-3">
+            <select class="form-control mx-auto w-auto" name="country">
+                <option value="" disabled selected>Select your country</option>
+                <option value="USA">USA</option>
+                <option value="UK">UK</option>
+                <option value="Canada">Canada</option>
+                <option value="Israel">Israel</option>
+                <option value="Germany">Germany</option>
+                <option value="France">France</option>
+                <option value="Australia">Australia</option>
+                <option value="Argentina">Argentina</option>
+                <option value="Mexico">Mexico</option>
+            </select>
         </div>
         <button class="btn btn-primary btn-lg" type="submit">Register</button>
     </form>
