--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block main %}
-<table class="table caption-top">
-    <caption><strong style="color: white;">Incoming Messages</strong></caption>
+<table class="table table-striped table-dark caption-top">
+    <caption><strong style="color: white;">Incoming Messages 📥</strong></caption>
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -22,7 +22,7 @@
         <td>{{ in_message.full_name }}</td>
         <td>{{ in_message.timestamp }}</td>
         <td>
-          <div class="btn-group">
+          <div>
             <form action="/read" method="post" style="display:inline;">
                 <input type="hidden" name="message_id" value="{{ in_message.id }}">
                 <button type="button" class="btn btn-secodary btn-primary" data-bs-toggle="popover" data-bs-placement="left" data-bs-title="Message Content" data-bs-content="{{ in_message.content }}">Read Message</button>
@@ -44,8 +44,8 @@
 
   <!-- Second Table for Outgoing Messages -->
 
-  <table class="table caption-top">
-    <caption><strong style="color: white;">Outgoing Messages</strong></caption>
+  <table class="table table-striped table-dark caption-top">
+    <caption><strong style="color: rgb(132, 254, 199);">Outgoing Messages 📤</strong></caption>
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -61,7 +61,7 @@
         <td>{{ out_message.full_name }}</td>
         <td>{{ out_message.timestamp }}</td>
         <td>
-          <div class="btn-group">
+          <div>
             <form action="/read" method="post" style="display:inline;">
                 <input type="hidden" name="message_id" value="{{ out_message.id }}">
                 <button type="button" class="btn btn-secodary btn-primary" data-bs-toggle="popover" data-bs-placement="left" data-bs-title="Message Content" data-bs-content="{{ out_message.content }}">Read Message</button>
