--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,10 +36,11 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/inbox">Inbox</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/search">Search for Friends</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/friends">My Friends</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/requests">Friend Requests</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/inbox">💬 Inbox</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/search">🔍 Search for Friends</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/friends">🫶🏽 My Friends</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/requests">🙏🏽 Friend Requests</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/trash">🗑️ Trash</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
